--- a/momo-payment/src/main/resources/application.properties
+++ b/momo-payment/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 
